		 fire the traces on that variable so that any GUI elements
		bound to that treevariable are updated
February 13, 2007 - Defect/enh. 234 : When a configuration is restored,
                and the config script has an error, keep on trying to
		execute the script but report all the errors in a dialog...
		at present, hopefully there are not very many errors as
		the dialog is not a scrolling dialog.
February 15,2007 - Synch gpVersion with VERSION symbol in config.h
Week of Feb 22, 2007 - BZ enhancement request 291 Gamma 2d deluxe 
                 spectrum.
Week of Feb 26, 2007 - BZ 292?  Ensure that tk app name is unique
                so multiple tkcons will open.
               - Fix inadvertent leaving of Gamma 2d as Ulong_t not
                 UInt_t and same for gamma deluxe, for 3.1 , Gamma 2dL
                 was already correct.
Week of March 5 - Add Splash screen.
                - Adjust chisquare calculation to be correct for CGaussianFit 
		  (thanks to Dirk Weisshaar).
Week of March 12, 2007-
	- Ensure that SpecTcl does not crash if VERSION not readable.
	  (BZ 294).
Week of March 19, 2007
        - Make CEvent::clear() O(1) time.bg
Week of April 2, 2007
        - Add disclaimer to filterread.htm about data beyond the last used
          position in filter buffers as someone made an assumption that is not
          true about it.
        - Added whatsnew3.1.htm page linked to front page that allows
          users to see what's new in SpecTcl 3.1

Pre-released April 26, 2007

Pre-3.
 
Week of April 30, 2007
        - Added observer capability to all dictionaries types.  This will
          allow support of traces on e.g. spectrum dictionary.
        - Added tests for dictionary observers and the observer manager
          helper classes.
        - Added capability to add/remove observers from the spectrum dictionary
          to CHistogrammer.
        - Added API entries to add/remove spectrum observers.